FlightPath 6.x Changelog
========================

2022-07-24
  When building semesters on the Degree or What If screen, made sure that their "req_by_degree_id" was set correctly.
  
  Modifications to advise_init_screen() function, and others, for extended support for other modules.

2022-07-23
  In the popup group description function (in AdvisingScreen), we now include the group as a non-rendered object in the $render array, so that other
  modules can act on it in hook_content_alter().
  
  Added weights to render array for displaying view (Degree and What If), so other modules can more easily manipulate.

  Created new hook: hook_init_flightpath_degree().  This allowes modules to act after FlightPath::init() has been called.  
  
  Added new method to ObjList, to refresh_indexes().  Should be called after we remove a course from a list manually.
  
  Added new hidden variable to advising screen: reinit_fp_after_draft_save.  If set to 'yes', then after a draft save the $fp variable with
  perform a fresh init() after a draft save.  This is primarily used by other modules which might be making changes to the degree plan in real time,
  and do not want to reload the entire student.  By default it is set to 'no', replicating existing functionlity that skips that step.
  
  Converted the AdvisingScreen::build_footnotes function to use render array, so other modules can add footnotes if necessary.
  

2022-07-22
  Added extra class to pie chart rows-- the total number of intended rows.  This lets us target with CSS with more precision.


2022-07-19
  Small change to popup course description, so repeat hours do not show excess zeroes.
  
  Made changes so that you can have specified repeats in groups with branches.
  

2022-07-12
  Made modifications to student_priority module, so that tests can be pulled directly from user attributes, rather than having
  the need to run an entire function.  Both methods are documented in the .api.php file.
  

2022-07-11